--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["airbnb", "prettier"],
+  "extends": ["airbnb"],
   "plugins": ["react", "jsx-a11y", "import"],
   "rules": {
     "prefer-destructuring": "off",
