--- a/package.json
+++ b/package.json
@@ -45,12 +45,10 @@
     "babel-eslint": "^10.0.1",
     "cli-glob": "^0.1.0",
     "eslint": "^6.0.1",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "6.0.0",
+    "eslint-plugin-flowtype": "^3.11.1",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
-    "prettier": "^1.16.4",
     "remark-cli": "^6.0.1",
     "remark-preset-lint-recommended": "^3.0.1",
     "stylefmt": "^6.0.3",
